Day 2 solution
very nice